[gd_scene load_steps=7 format=3 uid="uid://cy0myxu00505g"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_ajou1"]
[ext_resource type="Texture2D" uid="uid://blxm4xiyfb5bm" path="res://assets/art/main_menu/title_screen.png" id="1_nkldn"]
[ext_resource type="PackedScene" uid="uid://c2r3jwpqtj1c" path="res://planet.tscn" id="2_d3gse"]
[ext_resource type="PackedScene" uid="uid://dwslqpwoytc8x" path="res://pause.tscn" id="4_m40se"]

[sub_resource type="InputEventKey" id="InputEventKey_7d0ga"]
pressed = true
keycode = 4194305
echo = true

[sub_resource type="Shortcut" id="Shortcut_1yk55"]
events = [SubResource("InputEventKey_7d0ga")]

[node name="Level" type="Node2D"]
script = ExtResource("1_ajou1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2.49892, 2.53125)
texture = ExtResource("1_nkldn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 2)
offset = Vector2(577, 323)

[node name="Planet" parent="." instance=ExtResource("2_d3gse")]

[node name="PauseButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 9.0
offset_right = 91.0
offset_bottom = 40.0
shortcut = SubResource("Shortcut_1yk55")
text = "PAUSE"

[node name="PauseScreen" parent="." instance=ExtResource("4_m40se")]
visible = false
offset_left = -7.0
offset_top = -7.0
offset_right = 113.0
offset_bottom = 42.0

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
